Fixed overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,6 @@ html {
 }
 
 body {
-  max-width: 100vw;
   overflow-x: hidden;
 }
 
@@ -171,7 +170,7 @@ button:active {
   background-color: #242424;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 0;
   height: 100vh;
   z-index: 100;
   display: flex;
@@ -180,7 +179,6 @@ button:active {
   visibility: hidden;
   transition: all 300ms ease;
   opacity: 0;
-  transform: translate(100%);
 }
 
 .menu--open {
@@ -191,7 +189,7 @@ button:active {
 .menu--open .menu__backdrop {
   visibility: visible;
   opacity: 1;
-  transform: translate(0);
+  width: 100%;
 }
 
 .menu__links {
@@ -229,7 +227,7 @@ LANDING
 }
 
 header {
-  height: calc(100vh - 80px);
+  height: 100vh;
 }
 
 .header__container {
@@ -292,7 +290,7 @@ HIGHLIGHTS
 
 #highlights {
   position: relative;
-  max-width: 100vw;
+  max-width: 100%;
 }
 
 #highlights:after,
@@ -300,7 +298,7 @@ HIGHLIGHTS
   background: url("./assets/wave.svg");
   content: "";
   position: absolute;
-  width: 101vw;
+  width: 100%;
   height: 12vw;
   left: 0;
   z-index: 1;
@@ -412,7 +410,7 @@ FEATURES
 }
 
 .book__price--skeleton {
-  width : 200px;
+  width : 150px;
   height: 19px;
 }
 
